hiding package list image on smaller views and fixing some padding issues once again related to nesting components inside themselves. overhaul needed

--- a/styles/header.css
+++ b/styles/header.css
@@ -239,7 +239,7 @@ button.accordion-button {
   }
 
   .form-check {
-    padding: 0px 10px;
+    /* padding: 0px 10px; */
   }
 
   .subscriptionPlanTable-header h1 {
