--- a/styles/home.css
+++ b/styles/home.css
@@ -426,7 +426,6 @@ p.text-start.text-white.banner_dis {
 
   .get-started_block.mobile_padding .form-check {
     flex-direction: column;
-    padding: 10px !important;
     text-align: center;
     align-items: center;
   }
