--- a/styles/packages.css
+++ b/styles/packages.css
@@ -6,8 +6,7 @@
 
 @media screen and (max-width: 640px) {
   .packages-wrapper img {
-    height: auto;
-    width: 400px;
+    display: none;
   }
 }
 
